# shiller-pe-ratio

./: Cargo.toml  package-lock.json  package.json  snowpack.config.js
.github/workflows/: release.yml  update-data.yml
.netlify/: netlify.toml  state.json
scripts/: update-data.js
src/: data-source.js  data-source.test.js  data.json  index.html  inflation-adjusted-sp-500.json  lib.rs  main.js  main.rs  style.css  utils.js
