[package]
name = "shiller-pe-ratio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

datadog-tracing = { version = "0.2.3", features = ["axum"] }
tower-http = { version = "0.6.2", features = ["timeout"] }
tracing = "0.1"
